--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 ## docker-compose.yml
 ## https://docs.docker.com/compose/compose-file/compose-file-v2/
 ---
-version: "2"
+version: "3.3"
 
 services:
   tor-proxy:
     build: .
+    restart: "no"
+#    command: [ "--hush" ]
     environment:
       TOR_MAX_CIRCUIT_DIRTNESS: 600
-      TOR_PORT_BASE: 5050
-      TOR_PORT_AMOUNT: 10
+      TOR_PORT_BASE: 9060
+      TOR_PORT_AMOUNT: 5
