--- a/.github/workflows/shell-shellcheck.yml
+++ b/.github/workflows/shell-shellcheck.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          apt install -y spellcheck
+          sudo apt install -y spellcheck
 
       - name: Spellcheck
         run: |
