--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -2,7 +2,7 @@
 ## https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions
 ---
 
-name: shell-shellcheck
+name: shellcheck
 
 on:
   push:
